--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@vitest/ui": "^2.1.8",
         "@vue/reactivity": "^3.5.13",
         "eslint": "^9.17.0",
+        "npm-run-all2": "^7.0.2",
         "pkgroll": "^2.6.0",
         "publint": "^0.2.12",
         "release-it": "^17.11.0",
@@ -43,9 +44,12 @@
         "access": "public"
     },
     "scripts": {
-        "prepack": "eslint && tsc && pkgroll --clean-dist --sourcemap --minify && publint --strict",
+        "prepack": "run-s -lns test:lint test:tsc package:build package:lint",
         "release": "release-it --only-version",
-        "lint": "eslint"
+        "package:build": "pkgroll --clean-dist --sourcemap --minify",
+        "package:lint": "publint --strict",
+        "test:tsc": "tsc",
+        "test:lint": "eslint"
     },
     "description": "To install dependencies:",
     "repository": {
