--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -12,15 +12,15 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            -   uses: actions/checkout@v4
+            - uses: actions/checkout@v4
 
-            -   uses: actions/setup-node@v4
-                with:
-                    node-version: '20.x'
-                    registry-url: 'https://registry.npmjs.org'
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: "20.x"
+                  registry-url: "https://registry.npmjs.org"
 
-            -   uses: oven-sh/setup-bun@v2
+            - uses: oven-sh/setup-bun@v2
 
-            -   run: bun install
+            - run: bun install
 
-            -   run: bunx pkg-pr-new publish
+            - run: bunx pkg-pr-new publish
