--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
 bun.lockb
+bun.lock
 
 # Logs
 
