--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
     "version": "0.0.5",
     "license": "MIT",
     "type": "commonjs",
+    "engines": {
+        "node": ">=18"
+    },
+    "author": "Adam Gąsowski",
+    "bugs": {
+        "url": "https://github.com/gander-tools/nms-lib/issues"
+    },
+    "homepage": "https://github.com/gander-tools/nms-lib",
     "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.cts",
@@ -17,48 +25,45 @@
         }
     },
     "files": [
-        "LICENSE",
-        "README.md",
         "dist"
     ],
-    "devDependencies": {
-        "@eslint/js": "^9.17.0",
-        "@release-it/bumper": "^6.0.1",
-        "@types/bun": "^1.1.14",
-        "@types/node": "^22.10.5",
-        "@vitest/coverage-v8": "2.1.8",
-        "@vitest/ui": "^2.1.8",
-        "@vue/reactivity": "^3.5.13",
-        "eslint": "^9.17.0",
-        "npm-run-all2": "^7.0.2",
-        "pkgroll": "^2.6.0",
-        "publint": "^0.2.12",
-        "release-it": "^17.11.0",
-        "typescript": "^5.7.2",
-        "typescript-eslint": "^8.19.0"
-    },
-    "peerDependencies": {
-        "@vue/reactivity": "^3.0.0"
-    },
     "publishConfig": {
         "access": "public"
     },
     "scripts": {
-        "prepack": "run-s -lns test:lint test:tsc package:build package:lint",
+        "format": "prettier --write .",
+        "lint": "eslint",
+        "lint:fix": "eslint --fix",
+        "lint:format": "prettier --check .",
+        "lint:package": "publint --pack auto",
+        "prepack": "pkgroll --clean-dist --sourcemap --minify",
         "release": "release-it --only-version",
-        "package:build": "pkgroll --clean-dist --sourcemap --minify",
-        "package:lint": "publint --strict",
-        "test:tsc": "tsc",
-        "test:lint": "eslint"
+        "test": "vitest",
+        "test:coverage": "vitest --coverage",
+        "test:run": "vitest run",
+        "test:types": "tsc --noEmit",
+        "test:watch": "vitest watch"
     },
-    "description": "To install dependencies:",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/gander-tools/playground-js-lib.git"
+    "devDependencies": {
+        "@antfu/ni": "^23.2.0",
+        "@eslint/js": "^9.18.0",
+        "@release-it/bumper": "^7.0.0",
+        "@release-it/conventional-changelog": "^10.0.0",
+        "@types/bun": "^1.1.16",
+        "@types/node": "^22.10.5",
+        "@vitest/coverage-v8": "2.1.8",
+        "@vitest/ui": "^2.1.8",
+        "@vue/reactivity": "^3.5.13",
+        "eslint": "^9.18.0",
+        "eslint-config-prettier": "^9.1.0",
+        "pkgroll": "^2.6.1",
+        "prettier": "3.4.2",
+        "publint": "^0.3.1",
+        "release-it": "^18.1.1",
+        "typescript-eslint": "^8.19.1",
+        "vitest": "^2.1.8"
     },
-    "author": "Adam Gąsowski",
-    "bugs": {
-        "url": "https://github.com/gander-tools/playground-js-lib/issues"
-    },
-    "homepage": "https://github.com/gander-tools/playground-js-lib"
+    "peerDependencies": {
+        "@vue/reactivity": "^3.0.0"
+    }
 }
