--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "test:coverage": "vitest --coverage",
         "test:run": "vitest run",
         "test:types": "tsc --noEmit",
-        "test:watch": "vitest watch"
+        "test:watch": "vitest watch",
+        "version": "auto-changelog"
     },
     "devDependencies": {
         "@antfu/ni": "^23.2.0",
@@ -56,6 +57,7 @@
         "@vitest/coverage-v8": "2.1.8",
         "@vitest/ui": "^2.1.8",
         "@vue/reactivity": "^3.5.13",
+        "auto-changelog": "^2.5.0",
         "eslint": "^9.18.0",
         "eslint-config-prettier": "^9.1.0",
         "pkgroll": "^2.6.1",
