--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
         "@vitest/coverage-v8": "2.1.8",
         "@vitest/ui": "^2.1.8",
         "@vue/reactivity": "^3.5.13",
-        "auto-changelog": "^2.5.0",
         "eslint": "^9.18.0",
         "eslint-config-prettier": "^9.1.0",
+        "git-cliff": "^2.7.0",
         "pkgroll": "^2.6.1",
         "prettier": "3.4.2",
         "publint": "^0.3.1",
