--- a/cliff.toml
+++ b/cliff.toml
@@ -82,3 +82,7 @@ filter_commits = false
 topo_order = false
 # sort the commits inside sections by oldest/newest order
 sort_commits = "oldest"
+
+[remote.github]
+owner = "gander-tools"
+repo = "playground-js-lib"
