--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
         "access": "public"
     },
     "scripts": {
-        "format": "prettier --write .",
-        "lint": "eslint",
-        "lint:fix": "eslint --fix",
-        "lint:format": "prettier --check .",
+        "check": "biome check",
+        "fix": "biome check --write",
+        "format": "biome format",
+        "format:fix": "biome format --write",
+        "lint": "biome lint",
+        "lint:fix": "biome lint --write",
         "lint:package": "publint --pack auto",
         "prepack": "pkgroll --clean-dist --sourcemap --minify",
         "release": "release-it --only-version",
@@ -49,18 +51,15 @@
     },
     "devDependencies": {
         "@antfu/ni": "^23.2.0",
-        "@eslint/js": "^9.18.0",
+        "@biomejs/biome": "1.9.4",
         "@release-it/bumper": "^7.0.0",
         "@types/bun": "^1.1.16",
         "@types/node": "^22.10.5",
         "@vitest/coverage-v8": "2.1.8",
         "@vitest/ui": "^2.1.8",
         "@vue/reactivity": "^3.5.13",
-        "eslint": "^9.18.0",
-        "eslint-config-prettier": "^9.1.0",
         "git-cliff": "^2.7.0",
         "pkgroll": "^2.6.1",
-        "prettier": "3.4.2",
         "publint": "^0.3.1",
         "release-it": "^18.1.1",
         "typescript-eslint": "^8.19.1",
