chore: biome reformat

--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
             "default": "./dist/index.mjs"
         }
     },
-    "files": [
-        "dist"
-    ],
+    "files": ["dist"],
     "publishConfig": {
         "access": "public"
     },
