--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "type": "commonjs",
     "engines": {
-        "node": ">=18"
+        "node": "^22"
     },
     "author": "Adam Gąsowski",
     "bugs": {
@@ -50,7 +50,7 @@
         "@release-it/bumper": "^7.0.1",
         "@types/bun": "^1.2.2",
         "@types/node": "^22.13.0",
-        "@vitest/coverage-v8": "2.1.8",
+        "@vitest/coverage-v8": "^3.0.5",
         "@vitest/ui": "^3.0.5",
         "@vue/reactivity": "^3.5.13",
         "git-cliff": "^2.8.0",
