--- a/package.json
+++ b/package.json
@@ -58,9 +58,19 @@
         "pkgroll": "^2.6.1",
         "publint": "^0.3.2",
         "release-it": "^18.1.2",
+        "typescript": "^5.7.3",
         "vitest": "^3.0.5"
     },
     "peerDependencies": {
-        "@vue/reactivity": "^3.0.0"
+        "@vue/reactivity": "^3.0.0",
+        "typescript": "^4.1 || ^5.0"
+    },
+    "peerDependenciesMeta": {
+        "typescript": {
+            "optional": true
+        },
+        "@vue/reactivity": {
+            "optional": true
+        }
     }
 }
