--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -14,6 +14,8 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
+              with:
+                  node-version-file: 'package.json'
             - uses: oven-sh/setup-bun@v2
             - run: bun install
             - run: bunx pkg-pr-new publish
