--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "scripts": {
         "check": "biome check",
+        "check:fix": "biome check --write",
         "format": "biome format",
         "format:fix": "biome format --write",
         "lint": "biome lint",
