--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -16,6 +16,5 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version-file: 'package.json'
-            - uses: oven-sh/setup-bun@v2
-            - run: bun install
-            - run: bunx pkg-pr-new publish
+            - run: npm install
+            - run: npx pkg-pr-new publish
