--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,13 +18,7 @@ jobs:
 
             - uses: actions/setup-node@v4
               with:
-                  node-version: "20.x"
-                  registry-url: "https://registry.npmjs.org"
-
-            - uses: oven-sh/setup-bun@v2
-
-            - run: bun install
-
+                  node-version-file: 'package.json'
             - run: npm publish --provenance --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
