--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "type": "commonjs",
     "engines": {
-        "node": "^22"
+        "node": "^20 || >=22"
     },
     "author": "Adam Gąsowski",
     "bugs": {
