--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "url": "https://github.com/gander-tools/playground-js-lib/issues"
     },
     "repository": {
-        "url": "https://github.com/gander-tools/playground-js-lib"
+        "url": "git+https://github.com/gander-tools/playground-js-lib.git"
     },
     "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
