chore: add CHANGELOG.md link only to release message

--- a/cliff.toml
+++ b/cliff.toml
@@ -17,9 +17,7 @@ body = """
   https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
 {%- endmacro -%}
 
-{% if message %}
-    {{ message }}
-{% endif %}\
+{% if message %}{{ message }}{% endif %}
 
 {% if version %}\
     {% if previous.version %}\
