--- a/cliff.toml
+++ b/cliff.toml
@@ -72,6 +72,7 @@ commit_preprocessors = [
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
+  { body = "^Release \\d+\\.\\d+\\.\\d+$", skip = true},
   { message = "^feat", group = "<!-- 0 -->🚀 Features" },
   { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
   { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
