--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,5 +4,6 @@
  pre-commit:
    jobs:
      - run: bun run git-cliff --output
+       stage_fixed: true
      - run: bun run check:fix
        stage_fixed: true
