--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gander-tools/playground",
-    "version": "0.5.1",
+    "version": "0.6.0",
     "license": "MIT",
     "type": "commonjs",
     "engines": {
@@ -26,7 +26,9 @@
             "default": "./dist/index.mjs"
         }
     },
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "publishConfig": {
         "access": "public"
     },
@@ -50,14 +52,14 @@
         "@biomejs/biome": "1.9.4",
         "@release-it/bumper": "^7.0.1",
         "@types/bun": "^1.2.2",
-        "@types/node": "^22.13.1",
+        "@types/node": "^22.13.4",
         "@vitest/coverage-v8": "^3.0.5",
         "@vitest/ui": "^3.0.5",
         "@vue/reactivity": "^3.5.13",
         "git-cliff": "^2.8.0",
         "lefthook": "^1.10.10",
-        "pkgroll": "^2.8.2",
-        "publint": "^0.3.4",
+        "pkgroll": "^2.10.0",
+        "publint": "^0.3.5",
         "release-it": "^18.1.2",
         "typescript": "^5.7.3",
         "vitest": "^3.0.5"
