--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -15,6 +15,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
               with:
-                  node-version-file: 'package.json'
+                  node-version: '20.x'
+                  registry-url: "https://registry.npmjs.org"
             - run: npm install
             - run: npx pkg-pr-new publish
