--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         "test": "vitest",
         "test:coverage": "vitest --coverage",
         "test:run": "vitest run",
-        "test:types": "tsc --noEmit",
-        "test:watch": "vitest watch"
+        "test:watch": "vitest watch",
+        "typecheck": "tsc --noEmit"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
