fix: add pkg.pr.new uses bun

--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -13,9 +13,14 @@ jobs:
 
         steps:
             - uses: actions/checkout@v4
+
             - uses: actions/setup-node@v4
               with:
                   node-version: '20.x'
                   registry-url: "https://registry.npmjs.org"
-            - run: npm install
+
+            - uses: oven-sh/setup-bun@v2
+
+            - run: bun install
+
             - run: npx pkg-pr-new publish
