--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -23,4 +23,4 @@ jobs:
 
             - run: bun install
 
-            - run: bun run pkg-pr-new publish
+            - run: bunx pkg-pr-new publish
