--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -40,5 +40,8 @@ jobs:
                     REPO="${{ github.event.repository.name }}"
                     PACKAGE_TYPE="container"
 
+                    gh --version
+                    gh auth status
+
                     gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /orgs/${OWNER}/packages?package_type=container
 
